--- a/etc/fcfc_2pt.conf
+++ b/etc/fcfc_2pt.conf
@@ -11,22 +11,22 @@
 #  Specifications of the input catalogs  #
 ##########################################
 
-CATALOG         =
+CATALOG         = 
     # Filename of the input catalogs, string or string array.
-CATALOG_LABEL   =
+CATALOG_LABEL   = 
     # Label of the input catalogs, must be non-repetitive uppercase letters.
     # Character, same dimension as `CATALOG`.
     # If unset, catalogs are labelled in alphabetical order, i.e. [A,B,...].
-CATALOG_TYPE    =
+CATALOG_TYPE    = 
     # File format of the input catalogs (unset: 0).
     # Integer, same dimension as `CATALOG`.
     # Allowed values are:
     # * 0: ASCII text file;
     # * 1: FITS table.
-ASCII_SKIP      =
+ASCII_SKIP      = 
     # Number of lines to be skipped for ASCII catalogs (unset: 0).
     # Long integer, same dimension as `CATALOG`.
-ASCII_COMMENT   =
+ASCII_COMMENT   = 
     # Character indicating comment lines for ASCII catalogs (unset: '').
     # Character, same dimension as `CATALOG`.
     # Empty character ('') means disabling comments.
@@ -37,7 +37,7 @@ ASCII_FORMATTER =
     # E.g., for "%d %*s %f", the float number corresponds to column $2.
     # See https://en.cppreference.com/w/c/io/fscanf for details on the format.
 POSITION        = 
-    # 3-D comoving coordinates, in the order of [x,y,z].
+    # 3-D comoving coordinates, in the order of {RA,Dec,redshift} or {x,y,z}.
     # String array, 3 times the length of `CATALOG`.
     # They can be column indicator or expressions (e.g. "${RA}" or "$1 % 100").
     # Allowed values enclosed by ${}:
@@ -52,28 +52,28 @@ SELECTION       =
 COORD_CONVERT   = 
     # Boolean option, same dimension as `CATALOG` (unset: F).
     # If a scalar value is given, it is applied to all catalogs.
-    # True (T) for converting the coordinates from [RA,Dec,redshift] to
-    # the comoving [x,y,z], given the fiducial cosmology set below.
+    # True (T) for converting the coordinates from {RA,Dec,redshift} to
+    # the comoving {x,y,z}, given the fiducial cosmology set below.
 
 ##################################################
 #  Fiducial cosmology for coordinate conversion  #
 ##################################################
 
-OMEGA_M         =
+OMEGA_M         = 
     # Density parameter of matter at z = 0.
     # Double-precision number.
-OMEGA_LAMBDA    =
+OMEGA_LAMBDA    = 
     # Density parameter of Lambda at z = 0 (unset: 1 - OMEGA_M).
     # Double-precision number.
-DE_EOS_W        =
+DE_EOS_W        = 
     # Dark energy equation of state: w (unset: -1).
     # Double-precision number.
-CMVDST_ERR      =
+CMVDST_ERR      = 
     # Error for comoving distance evaluation (unset: 1e-08).
     # Double-precision number.
-Z_CMVDST_CNVT   =
+Z_CMVDST_CNVT   = 
     # Filename of a table for redshift to comoving distance conversion.
-    # It must be a text file with two columns: (redshift, comoving distance).
+    # It must be a text file with two columns: {redshift, comoving distance}.
     # If this file is set, the cosmological parameters above are omitted.
     # Lines starting with '#' are omitted.
 
@@ -81,37 +81,36 @@ Z_CMVDST_CNVT   =
 #  Configurations for the 2-point correlation function (2PCF)  #
 ################################################################
 
-BINNING_SCHEME  =
+BINNING_SCHEME  = 
     # Binning scheme of the 2PCFs, integer (unset: 0).
     # Allowed values are:
     # * 0: isotropic separation bins;
     # * 1: (s, mu) bins (required by 2PCF multipoles);
     # * 2: (s_perp, pi) bins (required by projected 2PCFs);
-PAIR_COUNT      =
+PAIR_COUNT      = 
     # Identifiers of pairs to be counted or read, string or string array.
     # Pairs are labelled by their source catalogs.
     # E.g., "DD" denotes auto pairs from the catalog 'D',
     # while "DR" denotes cross pairs from catalogs 'D' and 'R'.
-PAIR_COUNT_FILE =
+PAIR_COUNT_FILE = 
     # Name of the files for storing pair counts.
     # String, same dimension as `PAIR_COUNT`.
     # If a specified file exists, then the pair counts are read from this file;
     # otherwise the pair counts are evaluated and saved to the file.
-CF_ESTIMATOR    =
+CF_ESTIMATOR    = 
     # Estimator of the 2PCFs to be evaluated, string or string array.
     # It must be an expression with pair identifiers.
-    # In particular, "@@" denotes the analytical RR pair counts.
-CF_OUTPUT_FILE  =
+CF_OUTPUT_FILE  = 
     # Name of the files for saving 2PCFs with the desired binning scheme.
     # String, same dimension as `CF_ESTIMATOR`.
-MULTIPOLE       =
+MULTIPOLE       = 
     # Orders of Legendre multipoles to be evaluated, integer or integer array.
-MULTIPOLE_FILE  =
+MULTIPOLE_FILE  = 
     # Name of the files for saving 2PCF multipoles.
     # String, same dimension as `CF_ESTIMATOR`.
-PROJECTED_CF    =
+PROJECTED_CF    = 
     # Boolean option, indicate whether computing the projected 2PCFs (unset: F).
-PROJECTED_FILE  =
+PROJECTED_FILE  = 
     # Name of the files for saving projected 2PCFs.
     # String, same dimension as `CF_ESTIMATOR`.
 
@@ -119,27 +118,27 @@ PROJECTED_FILE  =
 #  Definitions of the bins  #
 #############################
 
-SEP_BIN_FILE    =
+SEP_BIN_FILE    = 
     # Filename of the table defining edges of separation (or s_perp) bins.
     # It mush be a text file with two columns, for the lower and upper limits
     # of the distance bins, respectively.
     # Lines starting with '#' are omitted.
 SEP_BIN_MIN     = 
-SEP_BIN_MAX     =
-SEP_BIN_SIZE    =
+SEP_BIN_MAX     = 
+SEP_BIN_SIZE    = 
     # Lower and upper limits, and width of linear separation (or s_perp) bins.
     # Double-precision numbers. They are only used if `SEP_BIN_FILE` is unset.
-MU_BIN_NUM      =
+MU_BIN_NUM      = 
     # Number of linear mu bins in the range [0,1), integer.
-PI_BIN_FILE     =
+PI_BIN_FILE     = 
     # Filename of the table defining edges of pi (a.k.a. s_para) bins.
     # Lines starting with '#' are omitted.
-PI_BIN_MIN      =
-PI_BIN_MAX      =
-PI_BIN_SIZE     =
+PI_BIN_MIN      = 
+PI_BIN_MAX      = 
+PI_BIN_SIZE     = 
     # Lower and upper limits, and width of linear pi bins.
     # Double-precision numbers. They are only used if `PI_BIN_FILE` is unset.
-SQ_DIST_PREC    =
+SQ_DIST_PREC    = 
     # Precision for squared distances, integer.
     # Digits of squared distances after 10^{`SQ_DIST_PREC`} are truncated.
     # For instance, the squared distance 1234.5678 is truncated to 1230 if
@@ -152,7 +151,7 @@ SQ_DIST_PREC    =
 #  Other settings  #
 ####################
 
-OUTPUT_STYLE    =
+OUTPUT_STYLE    = 
     # Style for 2-D outputs, integer (unset: 0).
     # Allowed values are:
     # * 0: flatten 2-D outputs and save 1-D lists;
